--- a/notebooks/10_file_io.ipynb
+++ b/notebooks/10_file_io.ipynb
@@ -386,7 +386,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**NEXT TOPIC:** [terminal apps](11_terminal_apps.ipynb)"
+    "**NEXT TOPIC:** [terminal apps](11_terminal_apps.ipynb)\n",
+    "\n",
+    "**ADVANCED TOPIC:** [advanced io](14_advanced_io.ipynb)"
    ]
   },
   {
