--- a/notebooks/14_advanced_io.ipynb
+++ b/notebooks/14_advanced_io.ipynb
@@ -22222,8 +22222,8 @@
     "## Exercises with Northwind\n",
     "\n",
     "- group into 5 separate groups\n",
-    "- answer each using SQL\n",
-    "- bonus: create a pandas version of each query\n",
+    "- answer the first 5 questions using SQL and Pandas\n",
+    "- too easy? continue to the next 5 questions (bonus)\n",
     "\n",
     "### Questions\n",
     "1. Write a query to get Product name and quantity/unit. \n",
