--- a/notebooks/14_advanced_io.ipynb
+++ b/notebooks/14_advanced_io.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Alt Text](../img/educational.png)\n",
+    "~ Hogfather, Discworld"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Advanced Input / Output methods\n",
     "\n",
     "We'll be showing examples of more advanced handling of files and information storage and retrieval\n",
