--- a/notebooks/98_contents.ipynb
+++ b/notebooks/98_contents.ipynb
@@ -155,6 +155,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "14 Advanced IO\n",
+    "---\n",
+    "An expansion on IO\n",
+    "\n",
+    "[Advanced IO](14_advanced_io.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "[Go back to index](00_index.ipynb)"
    ]
